--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
             'autoPlayVideos': 'true',
         });
     </script>
-    <script src="/assets/js/bootstrap.bundle.js"></script>
+    <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
